RESOLVED FIXED95771
[BlackBerry] Fix memory leak in InputHandler
https://bugs.webkit.org/show_bug.cgi?id=95771
Summary [BlackBerry] Fix memory leak in InputHandler
George Staikos
Reported 2012-09-04 12:31:35 PDT
The arrays were never deleted in openSelectPopup
Attachments
Patch (1.38 KB, patch)
2012-09-04 12:32 PDT, George Staikos
no flags
George Staikos
Comment 1 2012-09-04 12:32:50 PDT
Rob Buis
Comment 2 2012-09-04 12:39:44 PDT
Comment on attachment 162080 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=162080&action=review Looks good. > Source/WebKit/blackberry/WebKitSupport/InputHandler.cpp:1647 > + delete[] selecteds; I slightly prefer delete [] foo style. Up to you :)
WebKit Review Bot
Comment 3 2012-09-04 13:21:54 PDT
Comment on attachment 162080 [details] Patch Clearing flags on attachment: 162080 Committed r127493: <http://trac.webkit.org/changeset/127493>
WebKit Review Bot
Comment 4 2012-09-04 13:21:57 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.