[BlackBerry] Fix memory leak in InputHandler https://bugs.webkit.org/show_bug.cgi?id=95771

Reviewed by Rob Buis.

Simply delete the arrays at function exit.

* WebKitSupport/InputHandler.cpp:
(BlackBerry::WebKit::InputHandler::openSelectPopup):


Canonical link: https://commits.webkit.org/113644@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127493 268f45cc-cd09-0410-ab3c-d52691b4dbfc